--- a/future.tex
+++ b/future.tex
@@ -3,7 +3,7 @@
 \label{cap:future}
 
 Creemos que una dirección de investigación prometedora, que planeamos explorar más a fondo en trabajos futuros, 
-es adaptar nuestro enfoque para la generación exhaustiva acotada de pruebas, buscando mejorar su eficiencia, aplicabilidad y capacidad de integración con otras técnicas de prueba automatizadas.
+es adaptar nuestro enfoque para la generación exhaustiva acotada de tests, buscando mejorar su eficiencia, aplicabilidad y capacidad de integración con otras técnicas de prueba automatizadas.
 
 Una primera línea relevante consiste en ampliar las capacidades del análisis estático en el proceso de identificación de métodos observadores. 
 Actualmente, el análisis se basa en información superficial sobre el tipo de retorno y los argumentos de los métodos. 
@@ -23,7 +23,7 @@ El tratamiento explícito de estas dependencias permitiría una generación más
 Además, se deben considerar las dependencias de variables o constantes seteadas en el código, tanto en el análisis de cobertura como en el proceso de generación de entradas con BEAPI. 
 Estas dependencias influyen directamente en los caminos ejecutables del software y, por lo tanto, en la capacidad de los tests generados para alcanzar comportamientos relevantes.
 
-Finalmente, planeamos evaluar el desempeño de BEAPI frente a herramientas de generación de pruebas no exhaustivas, como Randoop, 
+Finalmente, planeamos evaluar el desempeño de BEAPI frente a herramientas de generación de tests no exhaustivas, como Randoop, 
 utilizando benchmarks modernos propuestos en la literatura. Esta evaluación permitirá comparar las capacidades de nuestra técnica con las de enfoques alternativos más ampliamente difundidos, 
 poniendo en perspectiva las ventajas y limitaciones de la generación exhaustiva acotada frente a otras estrategias de prueba automatizada.
 
