--- a/tables/groundTruth.tex
+++ b/tables/groundTruth.tex
@@ -3,7 +3,7 @@
 {\scriptsize
 \begin{tabular}{l l}
 \hline
-&Sample Builders  \\
+&Métodos generadores de objectos  \\
 \hline
 \multirow{2}{*}{\textbf{NCL}} 
  & NCLinkedList(int)  \\
@@ -80,7 +80,6 @@
 
 \end{tabular}%
 }
-\caption{Ground truth y cantidad de métodos en la API}
+\caption{Ground truth de métodos generadores por clase y la cantidad de métodos en la API de cada clase.}
 \label{tab:groundTruth}
 \end{table}
-
